continuo actualizando a nuevo modelo

--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -21,23 +21,14 @@
 }
 
 .size-12 { font-size: 12px; }
-
 .size-14 { font-size: 14px; }
-
 .size-16 { font-size: 16px; }
-
 .size-18 { font-size: 18px; }
-
 .size-21 { font-size: 21px; }
-
 .size-24 { font-size: 24px; }
-
 .size-36 { font-size: 36px; }
-
 .size-48 { font-size: 48px; }
-
 .size-60 { font-size: 60px; }
-
 .size-72 { font-size: 72px; }
 
 
@@ -60,7 +51,12 @@ div#outer-container {
 }
 
 div #content {
-    padding-bottom: 320px;        /* padding for footer: prevents overlaping */
+    /* padding for footer: prevents overlaping
+       This padding does not accounts for the instance logo.
+       This value must be modified for pages where the logo is present.  
+    */
+    padding-bottom: 180px;
+
     background: transparent;
 }
 
@@ -98,18 +94,19 @@ a:hover {
 
 }
 
-.top-bar-title, .top-bar-title a {
+.top-bar-title {
     color: #fff;
     font-family: Futura;
     font-weight: bold;
     font-size: 14px;
 }
 
-.top-bar-left a {
+.top-bar-title a {
     color: #fff;
     font-family: Futura;
     font-size: 15px;
     font-weight: normal;
+    margin-left: 10px;
 }
 
 .top-bar-right {
@@ -257,6 +254,7 @@ logo assumptions:
     border-bottom: 1px solid #39a0ea;
 }
 
+/* used on instance view, edit */
 .logo-display p {
     display: block;
     margin-left: auto;
@@ -271,76 +269,4 @@ logo assumptions:
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-/* ****************************************************************************
-* PREVIEW
-**************************************************************************** */
-
-.preview-title {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    text-align: center;
-    text-transform: uppercase;
-}
-.preview-title h3 {
-    font-family: Futura;
-    font-size: 30px;
-}
-
-.preview-desc {
-    font-size: 15px;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 0px 0px;
-    margin-bottom: 0px;
-}
-.preview-desc p {
-    color: #ed7d31;
-    /*color: #39a0ea;    */
-}
-
-
-.preview-imgs {
-    margin-top: 50px;
-}
-
-/* dont show link outside images on larger screens */
-@media only screen 
-and (min-width : 700px) {
-    .preview-imgs a { display: block; }
-}
-.preview-imgs a {
-    margin-left: auto;
-    margin-right: auto;
-    height: 0;
-}
-
-.preview-imgs img {
-    margin-top: 10px;
-    border-radius: 100px;
-    border: 0px;
-    width: 200px;
-    height: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0px;
-    transition-property: box-shadow;
-    transition-delay: 0s;
-    transition-duration: 0.2s;
-    transition-timing-function: ease-out;
-}
-
-.preview-imgs img:hover, .preview-imgs img:focus {
-    box-shadow: 0 0 0px 7px #46C7F4;
-}
-
-
-/* ****************************************************************************
-* Instances: index
-**************************************************************************** */
-
-.instances-logo {
-    max-width: 200px;
 }
