varios: iconos de mismo ancho. algo de i18n

--- a/webroot/css/app_items.css
+++ b/webroot/css/app_items.css
@@ -86,7 +86,7 @@ ul.pagination li a {
 }
 
 ul.pagination li.active a {
-    background-color: #DCE47E;
+    background-color: #ed7d31;
     color: #FFF;
     font-weight: bold;
     cursor: default;
