--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -1,3 +1,4 @@
+
 /* ****************************************************************************
 * DEFS
 **************************************************************************** */
@@ -26,6 +27,7 @@
 .size-18 { font-size: 18px; }
 .size-21 { font-size: 21px; }
 .size-24 { font-size: 24px; }
+.size-30 { font-size: 36px; }
 .size-36 { font-size: 36px; }
 .size-48 { font-size: 48px; }
 .size-60 { font-size: 60px; }
@@ -110,10 +112,11 @@ a:hover {
 }
 
 .top-bar-right {
-    background-color: transparent;
+    background: #ed7d31;
 }
 .top-bar-right .dropdown {
-    background-color: transparent;
+    background: #ed7d31;
+    border: 1px solid #ed7d31;
 }
 .top-bar-right a {
     background: #ed7d31;
@@ -122,6 +125,7 @@ a:hover {
 .top-bar-right a:hover {
     background: #c56828;
 }
+
 /* menu arrow */
 .top-bar-right .dropdown.menu > li.is-dropdown-submenu-parent > a::after {
     border-color: #fff transparent;
@@ -140,6 +144,30 @@ a:hover {
 #top-bar-logout-li {
     border-top: 1px solid #fff;
 }
+
+#top-bar-menu-icon {
+
+}
+
+.top-bar i {
+    color: #fff;
+    font-size: 20px;
+    height: 16px;
+    position: relative;
+    bottom: 2px;
+}
+.top-bar i.fi-list {
+    font-size: 25px;
+    height: 0px;
+    vertical-align: middle;
+}
+/*
+ Colors considered:
+ - black: #808080
+ - white: #fff;
+ - Futura Bold (#46C7F4)   -  darker version : #39a0ea
+ - Futura Light (#F26621)  -  lighter version: #ed7d31
+ */
 
 
 /* ****************************************************************************
