--- a/webroot/css/app_items.css
+++ b/webroot/css/app_items.css
@@ -1,3 +1,8 @@
+
+.unset-field {
+    color: red;
+}
+
 /* ****************************************************************************
 * Tooltips
 **************************************************************************** */
@@ -34,6 +39,20 @@ table tr th {
     color: #fff;
     border-bottom: 2px solid #808080;
 }
+
+table td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;     /* IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+ */
+    -o-text-overflow: ellipsis;  /* for Opera 9 & 10 */
+}
+
+table td i {
+    height: 0px;
+    line-height: 0px;
+    font-size: 30px;
+}
+
 
 /* head colors */
 table.hover > thead:hover > tr { background-color: #363638; }
