--- a/webroot/css/app/dot.css
+++ b/webroot/css/app/dot.css
@@ -1,5 +1,348 @@
-.viz-div {
-  /*background: red;*/
-  border: 1px dashed green;
-  min-height: 600px
+/* CAS ORANGE: #F26722 */
+/* CAS BLUE  : #42C8F4  */
+
+/*.svg-background { fill: #363638; }*/
+
+/* ****************************************************************************
+* PAGE
+**************************************************************************** */
+.page-content-dots {
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+    border-top: 2px solid #fff;
+    /*background: #363638;*/
+    /*color: #363637;*/
 }
+
+#content {
+	/* bottom padding for footer: prevents overlaping; */
+	padding-bottom: 0px;
+}
+#outer-container {
+	/*background-color: blue;*/
+	padding-bottom: 0px;
+}
+
+#dots-div {
+}
+
+footer {
+  display: none;
+}
+
+
+/* ****************************************************************************
+* TOP FILTERS
+**************************************************************************** */
+
+#viz-header-div {
+	padding-top: 30px;
+}
+
+.viz-header-div {
+	height: 70px; /* same height for all elements */
+}
+
+.viz-header-div label {
+	font-family: Futura;
+	font-weight: bold;
+	text-align: center;
+}
+
+.header-filter-select {
+	height: 40px;
+	width: 200px;
+	border-radius: 10px;
+	display: block;
+	margin: 0 auto;
+	color: #808080;
+	font-size: 14px;
+}
+
+
+.viz-header-div .button {
+	height: 40px;
+  	width: 40px;
+	border-radius: 20px;
+	border: 2px solid #ed7d31;
+	background-color: #fff;
+
+	display: block;
+	line-height: 34px;
+	padding: 0;
+	margin: 4px auto;
+	position: relative;
+	top: 10px;
+}
+.viz-header-div .button i {
+	font-size: 30px;
+	color: #ed7d31;
+}
+
+.viz-header-div .button:hover {
+	background-color: #ed7d31;
+	border: 4px solid #ed7d31;
+	line-height: 30px;
+}
+.viz-header-div .button:hover i {
+	color: #fff;
+}
+
+
+
+/* ****************************************************************************
+* DOTS
+**************************************************************************** */
+.viz-div {
+	padding: 0;
+	border: 0;
+	margin: 0;
+	/*border: 1px dashed red;*/
+	/*background: blue;*/
+}
+
+.viz-header-div {
+	padding: 0;
+	border: 0;
+	margin: 0;
+	/*background: orange;*/
+	/*border: 1px dashed orange;*/
+}
+
+.viz-svg-div {
+  padding: 0;
+  border: 0;
+  margin: 0;
+  /*background: red;*/
+  /*border: 1px dashed green;*/
+  /*min-height: 600px;*/
+}
+
+#svg-left {
+	border: 1px dashed red;
+}
+
+#svg-left-root {
+
+}
+#svg-right {
+	border: 1px dashed blue;
+}
+
+#svg-right-root {
+
+}
+
+/* SVG styles */
+svg {
+  flex-basis: 100%;
+  min-width: 200px;
+}
+.links line {
+  stroke: #aaa;
+}
+.nodes circle {
+  pointer-events: all;
+}
+
+
+/* ****************************************************************************
+* INFO BAR
+**************************************************************************** */
+
+#dots-navbar {
+  padding: 5px 0px;
+  background-color: #fff;
+  /*background-color: gray;*/
+  height: 110px;
+  /*display: none;*/
+  position: relative;
+  z-index: 1;
+  border-top: 1px solid #808080;
+  /*border-bottom: 1px solid #808080;*/
+}
+
+#dots-left-controls {
+  /*background-color: blue;*/
+  height: 100%;
+  padding: 0px;
+}
+#dots-middle-controls {
+  /*background-color: orange;*/
+  height: 100%;
+  border-right: 1px solid #808080;
+  border-left: 1px solid #808080;
+}
+#dots-right-controls {
+  /*background-color: orange;*/
+  height: 100%;
+  padding: 0px;
+}
+
+#dots-left-controls .button {
+  display: block;
+  border-radius: 20px;
+  height: 40px;
+  width: 40px;
+  background-color: #fff;
+  border: 2px solid #39a0ea;
+  color: #39a0ea;
+  line-height: 34px;
+  padding: 0;
+  margin: 4px auto;
+}
+#dots-navbar i {
+  font-size: 28px;
+}
+#dots-left-controls .button:hover {
+  border: 4px solid #ed7d31;
+  color: #ed7d31;
+  line-height: 30px;
+}
+
+#dots-right-controls .button {
+  color: #39a0ea;
+  background-color: #fff;
+  height: 50px;
+  width: 50px;
+  padding: 0;
+  border: 2px solid #39a0ea;
+  border-radius: 25px;
+  
+  display: block;
+  margin: 2px auto;
+  position: relative;
+  line-height: 0px;
+  top: -42px;
+}
+#dots-right-controls .button:hover {
+  border: 4px solid #ed7d31;
+  color: #ed7d31;
+}
+#info-nprojects-txt {
+  font-size: 14px;
+  font-family: Futura;
+  text-align: center;
+  
+  display: block;
+  position: relative;
+  line-height: 0;
+  top: -25px;
+}
+
+#info-nprojects {
+  color: #39a0ea;
+  font-family: Futura;
+  font-weight: bold;
+  text-align: center;
+  font-size: 32px;
+  
+  display: block;
+  position: relative;
+  line-height: 0;
+  top: 0px;
+}
+#dots_project_list_button {
+  font-size: 14px;
+  text-align: center;
+  display: block;
+  position: relative;
+  line-height: 0;
+  top: 25px;
+}
+
+
+#info-country-label {
+  font-family: Futura;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;     /* IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+ */
+  -o-text-overflow: ellipsis;  /* for Opera 9 & 10 */
+  padding: 0;
+  margin: 0;
+}
+#info-country-select {
+  font-family: Futura;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+}
+
+#info-country-ul {
+  list-style-type: circle;
+  font-family: Futura;  
+}
+#info-country-ul li {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;     /* IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+ */
+  -o-text-overflow: ellipsis;  /* for Opera 9 & 10 */
+  color: #808080;
+  font-size: 16px;
+  font-style: italic;
+  line-height: 20px;
+}
+#info-country-ul li:first-child {
+  color: black;
+  font-style: normal;
+  text-transform: uppercase;
+}
+
+
+/* ****************************************************************************
+* FILTERS
+**************************************************************************** */
+
+#filters-div {
+  background-color: #fff;
+  display: none;
+  /*height: 500px;*/
+  border-top: 1px solid #808080;
+  padding: 10px;
+  /*font-family: Futura;*/
+}
+
+#filters-title {
+  font-weight: bold; 
+}
+
+.filter-input {
+
+}
+
+#filters-div .button {
+  font-family: Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+  font-weight: bold;
+}
+
+/*
+.off-canvas {
+
+    background: #f2f2f2;
+    border-right: 1px solid #363638;
+    border-bottom: 1px solid #363638;
+
+    position: fixed;
+    min-height: 100%;
+    transition: all 3s ease-in-out;
+    z-index: 25;
+}
+
+.off-canvas-content {
+  margin-right: 0;
+  transition: all 3s ease-in-out;
+}
+
+#filter-clear {
+  float: right;
+  font-size: 15px;
+}
+
+#filter-submit {
+  font-size: 15px;
+  text-transform: none;
+}
+*/
+
