--- a/webroot/css/app/dot.css
+++ b/webroot/css/app/dot.css
@@ -10,21 +10,18 @@
     padding: 0px;
     border: 0px;
     margin: 0px;
-    border-top: 2px solid #fff;
+    border-top: 0px solid #fff;
     /*background: #363638;*/
     /*color: #363637;*/
 }
 
 #content {
-	/* bottom padding for footer: prevents overlaping; */
-	padding-bottom: 0px;
+  /* bottom padding for footer: prevents overlaping; */
+  padding-bottom: 0px;
 }
 #outer-container {
-	/*background-color: blue;*/
-	padding-bottom: 0px;
-}
-
-#dots-div {
+  /*background-color: blue;*/
+  padding-bottom: 0px;
 }
 
 footer {
@@ -37,56 +34,63 @@ footer {
 **************************************************************************** */
 
 #viz-header-div {
-	padding-top: 30px;
+  padding: 0;
+  border: 0;
+  margin: 0;
+
+  /*background-color: #ff9;*/
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 3px solid #000;
 }
 
-.viz-header-div {
-	height: 70px; /* same height for all elements */
-}
-
+/* same height for all elements */
+.viz-header-div { height: 70px; }
 .viz-header-div label {
-	font-family: Futura;
-	font-weight: bold;
-	text-align: center;
+  font-family: Futura;
+  font-weight: bold;
+  text-align: center;
 }
 
 .header-filter-select {
-	height: 40px;
-	width: 200px;
-	border-radius: 10px;
-	display: block;
-	margin: 0 auto;
-	color: #808080;
-	font-size: 14px;
+  height: 40px;
+  width: 150px;
+  border-radius: 10px;
+  display: block;
+  margin: 0 auto;
+  color: #808080;
+  font-size: 14px;
 }
-
 
 .viz-header-div .button {
-	height: 40px;
-  	width: 40px;
-	border-radius: 20px;
-	border: 2px solid #ed7d31;
-	background-color: #fff;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: 2px solid #ed7d31;
+  background-color: #fff;
 
-	display: block;
-	line-height: 34px;
-	padding: 0;
-	margin: 4px auto;
-	position: relative;
-	top: 10px;
+  display: block;
+  margin: 4px auto;
+
+  position: relative;
+  top: 10px;
 }
 .viz-header-div .button i {
-	font-size: 30px;
-	color: #ed7d31;
+  font-size: 30px;
+  color: #ed7d31;
 }
 
 .viz-header-div .button:hover {
-	background-color: #ed7d31;
-	border: 4px solid #ed7d31;
-	line-height: 30px;
+  background-color: #ed7d31;
+  border: 4px solid #ed7d31;
+  /*line-height: 30px;*/
 }
 .viz-header-div .button:hover i {
-	color: #fff;
+  color: #fff;
 }
 
 
@@ -94,46 +98,29 @@ footer {
 /* ****************************************************************************
 * DOTS
 **************************************************************************** */
-.viz-div {
-	padding: 0;
-	border: 0;
-	margin: 0;
-	/*border: 1px dashed red;*/
-	/*background: blue;*/
+
+#viz-dots-row {
+  /*border: 1px dashed;*/
 }
 
-.viz-header-div {
-	padding: 0;
-	border: 0;
-	margin: 0;
-	/*background: orange;*/
-	/*border: 1px dashed orange;*/
-}
-
-.viz-svg-div {
+.svg-div {
   padding: 0;
   border: 0;
   margin: 0;
+  /*border: 1px dashed red;*/
   /*background: red;*/
-  /*border: 1px dashed green;*/
   /*min-height: 600px;*/
+  /*max-height: 500px;*/
 }
 
 #svg-left {
-	border-right: 1px dashed #808080;
-  /*border-bottom: 1px dashed #808080;*/
+  border-bottom: 1px dashed #808080;
 }
+#svg-right { }
 
-#svg-left-root {
+#svg-left-root { }
+#svg-right-root { }
 
-}
-#svg-right {
-	/*border: 1px solid #808080;*/
-}
-
-#svg-right-root {
-
-}
 
 
 /* ****************************************************************************
@@ -168,7 +155,6 @@ footer {
   height: 100%;
   padding: 0px;
 }
-
 #dots-left-controls .button {
   display: block;
   border-radius: 20px;
@@ -189,21 +175,20 @@ footer {
   color: #ed7d31;
   line-height: 30px;
 }
-
 #dots-right-controls .button {
   color: #39a0ea;
   background-color: #fff;
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 100px;
   padding: 0;
   border: 2px solid #39a0ea;
-  border-radius: 25px;
+  border-radius: 70px 70px 10px 10px;
   
   display: block;
   margin: 2px auto;
   position: relative;
   line-height: 0px;
-  top: -42px;
+  top: -45px;
 }
 #dots-right-controls .button:hover {
   border: 4px solid #ed7d31;
@@ -278,7 +263,12 @@ footer {
   font-style: normal;
   text-transform: uppercase;
 }
-
+#info-country-ul a {
+  color: #F26722;
+  font-family: Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
 
 /* ****************************************************************************
 * FILTERS
